--- a/5/style.css
+++ b/5/style.css
@@ -5,7 +5,7 @@
 }
 body {
     height: 670px;
-    background: url(‪‪5\к заданию 5\img\apple_true.jpg) center no-repeat;
+    background-image: url(‪‪5\apple_true.jpg) center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
     padding-top: 180px;
